--- a/cv.html
+++ b/cv.html
@@ -76,11 +76,6 @@
         <button class="filter-button" data-filter="other" aria-label="Other">
             <img src="icons/cv-other.svg" alt="" />
         </button>
-
-        <!-- <button class="filter-button" data-filter="all">Show All</button>
-        <button class="filter-button" data-filter="work">Work</button>
-        <button class="filter-button" data-filter="education">Education</button>
-        <button class="filter-button" data-filter="other">Other</button> -->
     </div>
     </header>
 
@@ -88,7 +83,7 @@
 
         <div class="timeline">
     
-        <div class="timeline-item right" data-category="education"
+        <div class="timeline-item" data-category="work"
                 data-title="PhD in Computer Science"
                 data-description-html="<p>I'm currently pursuing a PhD in Computer Science at the University of Bern. In the Computer Graphics Group, my research focuses on applying Integer-Grid Maps, commonly used in hexahedral meshing, to the problem of general 3D shape reconstruction from point clouds.</p>"
                 data-image= "./images/IGRec.png">
@@ -110,7 +105,7 @@
             </div>
         </div>
 
-        <div class="timeline-item" data-category="education"
+        <div class="timeline-item" data-category="other"
                 data-title="SIGGRAPH 2025 - Technical Paper"
                 data-description-html="<p>I further developed my Bachelor thesis project. It got accepted as a SIGGRAPH technical paper. At the annual conference (in Vancouver), I presented my work: HexHex: Highspeed Extraction of Hexahedral Meshes.</p>"
                 data-image= "./images/SIGGRAPH.png">
@@ -233,7 +228,8 @@
 
         <div class="timeline-item" data-category="education"
                 data-title="Bachelor's Degree, Universiry of Bern"
-                data-description-html="<p>Honored with the 'Joint Alumni Association in Computer Science Award' for the thesis project 'Fast Hexahedral Mesh Extraction from Locally Injective Integer-Grid Maps' (Dec. 2023).</p>"
+                data-description-html="<p>Honored with the 'Joint Alumni Association in Computer Science Award' for the thesis project 'Fast Hexahedral Mesh Extraction from Locally Injective Integer-Grid Maps' (Dec. 2023).</p>
+                <a href='https://cgg.unibe.ch/media/resource_files/FastHexEx-Report.pdf'>Bachelor Thesis</a>"
                 data-image= "">
             <div class="category-icon"></div>
             <div class="content">
@@ -245,7 +241,7 @@
         <div class="timeline-item" data-category="other"
                 data-title="Board member of the 'WBG Bleiche'"
                 data-description-html="<p>Member of a lay committee for the administration of the “Bleiche” housing cooperative. Regular participation in meetings and minute-taking.</p>"
-                data-image= "">
+                data-image= "images/Bleiche.jpg">
             <div class="category-icon"></div>
             <div class="content">
             <h3>2019 – 2025</h3>
