--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
         <link rel="stylesheet" href="./styles/style.css">
         <link rel="stylesheet" href="./styles/themes.css">
+        <link rel="stylesheet" href="./styles/index.css">
     </head>
     <body>
 
@@ -30,6 +31,7 @@
 
         <!-- My Picture and Intro Text -->
         <main class="center-content">
+
             <img src="./images/sprinkles.jpg" alt="Tobi" class="profile-img">
             <p class="intro-text">
                 Hello World. I'm Tobi and this is my website.<br>It is nice that you are here, but please be aware that this site is currently under construction!
