--- a/cv.html
+++ b/cv.html
@@ -58,23 +58,48 @@
     </div>
     </section>
 
+    <!-- Title and Filter Button Icons -->
     <header class="timeline-header">
     <h1>Curriculum Vitae</h1>
     <div class="timeline-filters">
         <button class="filter-button active" data-filter="all" aria-label="Show All">
-            <img src="icons/cv-all.svg" alt="" />
+            <svg role="img" viewBox="0 0 96 96" xmlns="http://www.w3.org/2000/svg">
+                    <title>Show All</title>
+                <path d="M 95 35 L 59 35 L 48 0 L 36 35 L 0 35 L 29 56 L 18 90 L 48 69 L 77 90 L 66 56 Z"/>
+                </svg>
         </button>
 
         <button class="filter-button" data-filter="work" aria-label="Work">
-            <img src="icons/cv-work.svg" alt="" />
+            <svg role="img" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                <title>Work</title>
+                <path d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5"/>
+            </svg>
         </button>
 
         <button class="filter-button" data-filter="education" aria-label="Education">
-            <img src="icons/cv-education.svg" alt="" />
+            <svg role="img" viewBox="0 0 379.802 379.802" xmlns="http://www.w3.org/2000/svg">
+                        <title>Education</title>
+                        <path d="M379.327,337.307l-25.658-68.74V161.591h-0.001c-0.031-2.378-1.189-4.6-3.119-5.988L181.353,33.878
+			c-0.01-0.006-0.239-0.165-0.289-0.196c-2.532-1.731-5.977-1.798-8.61,0.097L3.12,155.602c-1.931,1.389-3.088,3.61-3.119,5.988
+			c-0.032,2.378,1.065,4.63,2.959,6.069l85.921,65.353v25.539c0,26.419,45.277,40.674,87.878,40.674
+			c42.674,0,88.028-14.255,88.028-40.674v-25.539l73.882-56.195v91.749l-25.66,68.741c-1.448,3.881,0.522,8.201,4.403,9.649
+			c0.864,0.323,1.75,0.476,2.622,0.476c3.04,0,5.901-1.863,7.027-4.879l11.607-31.096v28.473c0,4.142,3.357,7.5,7.5,7.5
+			c4.143,0,7.5-3.358,7.5-7.5v-28.469l11.605,31.092c1.126,3.017,3.986,4.879,7.027,4.879c0.871,0,1.758-0.153,2.622-0.476
+			C378.803,345.509,380.775,341.188,379.327,337.307z M249.787,258.551c0,10.468-28.449,25.674-73.028,25.674
+			c-45.152,0-72.878-14.953-72.878-25.674v-12.52c7.912-18.672,38.931-32.615,73.028-32.615c34.044,0,65,13.942,72.878,32.611
+			V258.551z M249.787,221.968c-16.553-14.347-43.563-23.552-72.878-23.552c-29.375,0-56.446,9.218-73.028,23.581v-17.485
+			c0-22.895,33.443-42.238,73.028-42.238c39.504,0,72.878,19.343,72.878,42.238V221.968z M264.787,214.167v-9.654
+			c0-15.979-9.623-30.735-27.096-41.548c-16.352-10.118-37.938-15.69-60.782-15.69c-22.852,0-44.463,5.571-60.851,15.687
+			c-17.526,10.817-27.178,25.574-27.178,41.552v9.654l-68.771-52.309L176.835,49.104l156.725,112.754L264.787,214.167z"/>
+                    </svg>
         </button>
 
         <button class="filter-button" data-filter="other" aria-label="Other">
-            <img src="icons/cv-other.svg" alt="" />
+            <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <title>Other</title>
+                <path d="M15.728 9.686l-1.414-1.414L5 17.586V19h1.414l9.314-9.314zm1.414-1.414l1.414-1.414-1.414-1.414-1.414 1.414 1.414 1.414zM7.242 21H3v-4.243L16.435 3.322a1 1 0 0 1 1.414 0l2.829 2.829a1 1 0 0 1 0 1.414L7.243 21z"/>
+                    </svg>
+            </svg>
         </button>
     </div>
     </header>
@@ -230,7 +255,7 @@
                 data-title="Bachelor's Degree, Universiry of Bern"
                 data-description-html="<p>Honored with the 'Joint Alumni Association in Computer Science Award' for the thesis project 'Fast Hexahedral Mesh Extraction from Locally Injective Integer-Grid Maps' (Dec. 2023).</p>
                 <a href='https://cgg.unibe.ch/media/resource_files/FastHexEx-Report.pdf'>Bachelor Thesis</a>"
-                data-image= "">
+                data-image= "images/HexHex.png">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Sep. 2019 – Jan. 2024</h3>
