--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
     <section class="projects-grid">
 
         <a href="https://github.com/tobiluc/ToLoG" class="project-card">
-            <img src="images/Placeholder.png" alt="ToLoG" class="project-img">
+            <img src="images/Project-ToLoG.png" alt="ToLoG" class="project-img">
             <div class="project-info">
                 <h3>ToLoG (C++)</h3>
                 <p>Tobis Library of Geometry is an ongoing project where I put some general purpose datastructures and algorithms that I use in other projects.</p>
@@ -39,7 +39,7 @@
         </a>
 
         <a href="https://github.com/tobiluc/Wordhunter" class="project-card">
-            <img src="images/Placeholder.png" alt="Wordhunter" class="project-img">
+            <img src="images/Project-WordHunter.png" alt="Wordhunter" class="project-img">
             <div class="project-info">
                 <h3>Wordhunter (Godot)</h3>
                 <p>A simple game made in Godot where the goal is to find words in a hexagonal grid of letters. I have not implemented any losing condition ;)</p>
@@ -47,7 +47,7 @@
         </a>
 
         <a href="https://github.com/tobiluc/CuttingPlanes" class="project-card">
-            <img src="images/Placeholder.png" alt="Cutting Planes" class="project-img">
+            <img src="images/Project-CuttingPlanes.png" alt="Cutting Planes" class="project-img">
             <div class="project-info">
                 <h3>Cutting Planes 2D Visualizer (C++, Python)</h3>
                 <p>Cutting Planes is an algorithm to solve mixed integer linear problems. This project contains a c++ solver (for arbitrary dimensions), and a visualization tool made in python (for 2d problems). It was created for the Applied Optimization Seminar at the Unversity of Bern in the spring semester 2024.</p>
@@ -55,7 +55,7 @@
         </a>
 
         <a href="https://github.com/tobiluc/LogicLounge" class="project-card">
-            <img src="images/Placeholder.png" alt="Logic Lounge" class="project-img">
+            <img src="images/Project-LogicLounge.png" alt="Logic Lounge" class="project-img">
             <div class="project-info">
                 <h3>Logic Lounge (Java)</h3>
                 <p>Some algorithms and latex visualizations related to the course "Grundlagen der Technischen Informatik" at the University of Bern.</p>
@@ -63,7 +63,7 @@
         </a>
 
         <a href="https://github.com/tobiluc/Raytracer" class="project-card">
-            <img src="images/Placeholder.png" alt="Raytracer" class="project-img">
+            <img src="images/Project-RayTracer.png" alt="Raytracer" class="project-img">
             <div class="project-info">
                 <h3>Raytracer (Java)</h3>
                 <p>An editor to define shapes and lights which are raytraced by clicking a button to produce a (hopefully beautiful) image. You can define primitive shapes, load meshes, texture- and normal-maps, and define certain material properties of your shapes.</p>
@@ -71,7 +71,7 @@
         </a>
 
         <a href="https://github.com/tobiluc/Sokoban" class="project-card">
-            <img src="images/Placeholder.png" alt="Sokoban" class="project-img">
+            <img src="images/Project-Sokoban.png" alt="Sokoban" class="project-img">
             <div class="project-info">
                 <h3>Sokoban (Java)</h3>
                 <p>A classic where you push boxes (or flies?) onto buttons (or into spider webs?). The project was started during the "Programming 2" course in the spring semester 2020.</p>
@@ -79,7 +79,7 @@
         </a>
 
         <a href="" class="project-card">
-            <img src="images/Placeholder.png" alt="Santa Shooter" class="project-img">
+            <img src="images/Project-SantaShooter.png" alt="Santa Shooter" class="project-img">
             <div class="project-info">
                 <h3>Santa Shooter (GameMaker)</h3>
                 <p>To process a Christmas without cookies, I created this shoot'em up game where Santa has to defend himself against flying cookies. Unfortunately, the source code has been lost to time, but there is still an executable to enjoy the game.</p>
