--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
     </header>
 
     <main class="content">
-        <p>Hiiiiiiiii, you found me :D</p>
+        <p>Hiiiiiiiii, you found me. You get a cookie :D</p>
     </main>
 
     <section class="projects-grid">
@@ -75,7 +75,7 @@
             <img src="images/Project-RayTracer.png" alt="Raytracer" class="project-img">
             <div class="project-overlay">
                 <h3>Raytracer (Java)</h3>
-                <p>An editor to define shapes and lights which are raytraced by clicking a button to produce a (hopefully beautiful) image. You can define primitive shapes, load meshes, texture- and normal-maps, and define certain material properties of your shapes.</p>
+                <p>An editor to raytrace your own little scenes and produce (hopefully beautiful) images. All the logic is written in good ol' java. You can define primitive shapes, load meshes, texture- and normal-maps, define certain material properties of your shapes, and more....</p>
             </div>
             </div>
         </a>
@@ -85,7 +85,7 @@
             <img src="images/Project-Sokoban.png" alt="Sokoban" class="project-img">
             <div class="project-overlay">
                 <h3>Sokoban (Java)</h3>
-                <p>A classic where you push boxes (or flies?) onto buttons (or into spider webs?). It started as a commandline application during "Programming 2" (2020), but I wanted something that was visually (a bit) more pleasing. The game automatically reads levels from the corresponding folder, so take a look at some level files, and create your own if you like :)</p>
+                <p>A classic where you push boxes (or flies?) onto buttons (or into spider webs?). The game automatically reads levels from the corresponding folder, so take a look at some level files, and create your own if you like :)</p>
             </div>
             </div>
         </a>
