--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
         <!-- My Picture and Intro Text -->
         <main class="center-content">
-
+             <h1>Website of Tobias Luc Kohler</h1>
             <img src="./images/sprinkles.jpg" alt="Tobi" class="profile-img">
             <p class="intro-text">
-                Hello World. I'm Tobi and this is my website.<br>It is nice that you are here, but please be aware that this site is currently under construction!
+                Hello World. I am Tobi. It is nice that you are here!
             </p>
         </main>
 
