--- a/projects.html
+++ b/projects.html
@@ -95,7 +95,7 @@
             <img src="images/Project-SantaShooter.png" alt="Santa Shooter" class="project-img">
             <div class="project-overlay">
                 <h3>Santa Shooter (GameMaker)</h3>
-                <p>Once upon a December, there were no cookies for me. To cope with this, I developed this shoot 'em up game in which Santa has to defend himself against the approaching cookies. There are shooting stars, power-ups, and even a secret snowman boss.</p>
+                <p>Once upon a December, there were no cookies for me. To cope with this, I developed this shoot 'em up game in which Santa has to defend himself against the approaching cookies.</p>
             </div>
             </div>
         </a>
