some text additions and game refactoring

--- a/cv.html
+++ b/cv.html
@@ -55,6 +55,9 @@
     </ul>
     </div>
 
+    <!--TODO: Include language/technical skills like German/English/MS Office/Java/...-->
+    <!--TODO: Button to download a compact pdf of the cv-->
+
     </div>
     </section>
 
@@ -110,8 +113,10 @@
     
         <div class="timeline-item" data-category="work"
                 data-title="PhD in Computer Science"
-                data-description-html="<p>I'm currently pursuing a PhD in Computer Science at the University of Bern. In the Computer Graphics Group, my research focuses on applying Integer-Grid Maps, commonly used in hexahedral meshing, to the problem of general 3D shape reconstruction from point clouds.</p>"
-                data-image= "./images/IGRec.png">
+                data-description-html="
+                    <p>I'm currently pursuing a PhD in Computer Science at the University of Bern. In the Computer Graphics Group, my research focuses on applying Integer-Grid Maps, commonly used in hexahedral meshing, to the problem of general 3D shape reconstruction from point clouds.</p>
+                    <img src='./images/IGRec.png'/>
+                ">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Oct. 2025 – 2029</h3>
@@ -121,8 +126,13 @@
 
         <div class="timeline-item" data-category="other"
                 data-title="Programming Contest Coach"
-                data-description-html="<p>I coached two teams of three of the University of Bern for the ICPC Southwestern Europe Regional Contest (SWERC). I organized the trip to Lyon for myself and the six amazing people I accompanied.</p>"
-                data-image= "./images/SWERC25.jpeg">
+                data-description-html="
+                    <p>I coached two teams of three of the University of Bern for the ICPC Southwestern
+                    Europe Regional Contest (SWERC), a programming contest. This meant, organizing the 3-day trip to Lyon for myself
+                    and the six amazing people I accompanied.</p>
+                    <a href='https://www.linkedin.com/feed/update/urn:li:activity:7399198529791090688/'>LinkedIn Post</a>
+                    <img src='./images/SWERC25.jpeg'/>
+                ">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Nov. 2025</h3>
@@ -132,8 +142,11 @@
 
         <div class="timeline-item" data-category="other"
                 data-title="SIGGRAPH 2025 - Technical Paper"
-                data-description-html="<p>I further developed my Bachelor thesis project. It got accepted as a SIGGRAPH technical paper. At the annual conference (in Vancouver), I presented my work: HexHex: Highspeed Extraction of Hexahedral Meshes.</p>"
-                data-image= "./images/SIGGRAPH.jpeg">
+                data-description-html="
+                    <p>What started as my bachelor thesis project got accepted as a technical paper at <a href='https://www.siggraph.org'>ACM SIGGRAPH<a/>, the premier conference on computer graphics. In beautiful Vancouver, I presented my work: 'HexHex: Highspeed Extraction of Hexahedral Meshes'.</p>
+                    <a href='https://www.algohex.eu/publications/hexhex/'>Project Page</a>
+                    <img src='./images/SIGGRAPH.jpeg'/>
+                ">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Aug. 2025</h3>
@@ -143,8 +156,10 @@
 
         <div class="timeline-item" data-category="education"
                 data-title="Master's Degree"
-                data-description-html="<p>I finished my 2 year Master's degree with a 6 as an overall grade. For the thesis project 'General Shape Reconstruction from Point Clouds using 3D Parametrizations', I am about to reeive the honor of the Faculty Award of Mathematics, Statistics and Computer Science (Feb. 2026).</p>"
-                data-image= "./images/IGRec.png">
+                data-description-html="
+                    <p>After 2 years, I completed my Master's degree in computer science, specialized in visual computing (overall grade: 6). For the thesis project 'General Shape Reconstruction from Point Clouds using 3D Parametrizations', I am about to receive the honor of the Faculty Award of Mathematics, Statistics and Computer Science (Feb. 2026).</p>
+                    <img src='./images/IGRec.png'/>
+                ">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Feb. 2024 – Sep. 2025</h3>
@@ -153,20 +168,20 @@
         </div>
 
         <div class="timeline-item" data-category="work"
-                data-title="TA (BK)"
-                data-description-html="<p>15%</p>"
-                data-image= "">
+                data-title="TA (BK, 15%)"
+                data-description-html="<p>Correction of exercises and exams, leading weekly exercise sessions.</p>">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Spring 2024</h3>
-            <h4>Teaching Assistant, Computability and Complexity (BK)</h4>
+            <h4>Teaching Assistant, Computability and Complexity (BK, 15%)</h4>
             </div>
         </div>
 
         <div class="timeline-item" data-category="work"
                 data-title="Research Assistant, Computer Graphics Group (20%)"
-                data-description-html="<p>As a research assistant, I continued to develop my Bachelor's thesis project where I optimized the hexahedral mesh etraction from defect-free integer-grid maps.</p>"
-                data-image= "">
+                data-description-html="
+                    <p>Assistance with research work in the field of geometry processing and mesh generation in the Computer Graphics Group.</p>
+                    ">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Nov. 2023 - Aug. 2025</h3>
@@ -175,87 +190,82 @@
         </div>
 
          <div class="timeline-item" data-category="work"
-                data-title="TA (GTI)"
-                data-description-html="<p>15%</p>"
-                data-image= "">
+                data-title="TA (GTI, 15%)"
+                data-description-html="<p>Correction of exercises and exams, leading weekly exercise sessions.</p>">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Fall 2023</h3>
-            <h4>Teaching Assistant, Fundamentals of Technical Computer Science (GTI)</h4>
+            <h4>Teaching Assistant, Fundamentals of Technical Computer Science (GTI, 15%)</h4>
             </div>
         </div>
 
         <div class="timeline-item" data-category="work"
-                data-title="TA (BK)"
-                data-description-html="<p>15%</p>"
-                data-image= "">
+                data-title="TA (BK, 15%)"
+                data-description-html="<p>Correction of exercises and exams, leading weekly exercise sessions.</p>">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Spring 2023</h3>
-            <h4>Teaching Assistant, Computability and Complexity (BK)</h4>
+            <h4>Teaching Assistant, Computability and Complexity (BK, 15%)</h4>
             </div>
         </div>
 
         <div class="timeline-item" data-category="work"
-                data-title="TA (DA)"
-                data-description-html="<p>15%</p>"
-                data-image= "">
+                data-title="TA (DA, 15%)"
+                data-description-html="<p>Correction of exercises and exams.</p>">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Spring 2023</h3>
-            <h4>Teaching Assistant, Datastructures and Algorithms (DA)</h4>
+            <h4>Teaching Assistant, Datastructures and Algorithms (DA, 15%)</h4>
             </div>
         </div>
 
          <div class="timeline-item" data-category="work"
-                data-title="TA (GTI)"
-                data-description-html="<p>15%</p>"
-                data-image= "">
+                data-title="TA (GTI, 15%)"
+                data-description-html="<p>Correction of exercises and exams, leading weekly exercise sessions.</p>">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Fall 2022</h3>
-            <h4>Teaching Assistant, Fundamentals of Technical Computer Science (GTI)</h4>
+            <h4>Teaching Assistant, Fundamentals of Technical Computer Science (GTI, 15%)</h4>
             </div>
         </div>
 
         <div class="timeline-item" data-category="work"
-                data-title="TA (DB)"
-                data-description-html="<p>15%</p>"
-                data-image= "">
+                data-title="TA (DB, 15%)"
+                data-description-html="<p>Correction of exercises and exams, leading weekly exercise sessions.</p>">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Spring 2022</h3>
-            <h4>Teaching Assistant, Databases (DB)</h4>
+            <h4>Teaching Assistant, Databases (DB, 15%)</h4>
             </div>
         </div>
 
         <div class="timeline-item" data-category="work"
-                data-title="TA (GTI)"
-                data-description-html="<p>15%</p>"
-                data-image= "">
+                data-title="TA (GTI, 15%)"
+                data-description-html="<p>Correction of exercises and exams, leading weekly exercise sessions.</p>">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Fall 2021</h3>
-            <h4>Teaching Assistant, Fundamentals of Technical Computer Science (GTI)</h4>
+            <h4>Teaching Assistant, Fundamentals of Technical Computer Science (GTI, 15%)</h4>
             </div>
         </div>
 
          <div class="timeline-item" data-category="work"
-                data-title="TA (DA)"
-                data-description-html="<p>15%</p>"
-                data-image= "">
+                data-title="TA (DA, 15%)"
+                data-description-html="<p>Correction of exercises and exams.</p>">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Spring 2021</h3>
-            <h4>Teaching Assistant, Datastructures and Algorithms (DA)</h4>
+            <h4>Teaching Assistant, Datastructures and Algorithms (DA, 15%)</h4>
             </div>
         </div>
 
         <div class="timeline-item" data-category="education"
                 data-title="Bachelor's Degree, Universiry of Bern"
-                data-description-html="<p>Honored with the 'Joint Alumni Association in Computer Science Award' for the thesis project 'Fast Hexahedral Mesh Extraction from Locally Injective Integer-Grid Maps' (Dec. 2023).</p>
-                <a href='https://cgg.unibe.ch/media/resource_files/FastHexEx-Report.pdf'>Bachelor Thesis</a>"
-                data-image= "images/HexHex.png">
+                data-description-html="
+                    <p>Honored with the 'Joint Alumni Association in Computer Science Award' for the thesis project 'Fast Hexahedral Mesh Extraction from Locally Injective Integer-Grid Maps' (Dec. 2023).</p>
+                    <a href='https://cgg.unibe.ch/media/resource_files/FastHexEx-Report.pdf'>Bachelor Thesis</a>
+                    <img src='images/HexHex.png'/>
+                ">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Sep. 2019 – Jan. 2024</h3>
@@ -265,8 +275,10 @@
 
         <div class="timeline-item" data-category="other"
                 data-title="Board member of the 'WBG Bleiche'"
-                data-description-html="<p>Member of a lay committee for the administration of the “Bleiche” housing cooperative. Regular participation in meetings and minute-taking.</p>"
-                data-image= "images/Bleiche.jpg">
+                data-description-html="
+                    <p>Member of a lay committee for the administration of the “Bleiche” housing cooperative. Regular participation in meetings and minute-taking.</p>
+                    <img src='images/Bleiche.jpg'/>
+                ">
             <div class="category-icon"></div>
             <div class="content">
             <h3>2019 – 2025</h3>
@@ -276,8 +288,9 @@
 
         <div class="timeline-item" data-category="work"
                 data-title="Civil Service, Tagesschule und Schule Worb"
-                data-description-html="<p>For a year I accompanied over 200 children from Kindergaten to 6-th grade.</p>"
-                data-image= "">
+                data-description-html="
+                    <p>For a year I accompanied over 200 children from Kindergaten to 6-th grade.</p>
+                    ">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Sep. 2018 – Aug. 2019</h3>
@@ -287,8 +300,7 @@
 
         <div class="timeline-item" data-category="other"
                 data-title="Math Tutor"
-                data-description-html="<p>Occasional tutoring (5-th grade to Gymnasium), primarily in Mathematics.</p>"
-                data-image= "">
+                data-description-html="<p>Occasional tutoring (5-th grade to Gymnasium), primarily in Mathematics (in the past also in French, German and Computer Science).</p>">
             <div class="category-icon"></div>
             <div class="content">
             <h3>2017 – today</h3>
@@ -298,8 +310,7 @@
 
         <div class="timeline-item" data-category="education"
                 data-title="Matura, Gymnasium Kirchenfeld"
-                data-description-html="<p>Matura with main subject Physics and Applied Matheamtics (PAM).</p>"
-                data-image= "">
+                data-description-html="<p>Matura with main subject Physics and Applied Matheamtics (PAM).</p>">
             <div class="category-icon"></div>
             <div class="content">
             <h3>Sep. 2014 – Aug. 2018</h3>
@@ -315,7 +326,6 @@
         <button class="close-btn" aria-label="Close">×</button>
         <h3 id="popup-title"></h3>
         <div id="popup-content"></div>
-        <img id="popup-image" alt="" />
     </div>
     </div>
 
@@ -359,6 +369,11 @@
                 </svg>
             </a>
         </div>
+
+        <div class="copyright">
+            © 2025 Tobias Kohler. All rights reserved.
+        </div>
+        
     </footer>
 
     <script src="./scripts/themes.js"></script>
