--- a/games/SantaShooter/index.html
+++ b/games/SantaShooter/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <script type="module" src="SantaShooter.js"></script>
+   <script type="module" src="game.js?v=dev"></script>
 </body>
 </html>
