--- a/projects.html
+++ b/projects.html
@@ -160,6 +160,11 @@
                 </svg>
             </a>
         </div>
+
+        <div class="copyright">
+            © 2025 Tobias Kohler. All rights reserved.
+        </div>
+
     </footer>
 
     <script src="./scripts/themes.js"></script>
