--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
              <h1>Website of Tobias Luc Kohler</h1>
             <img src="./images/sprinkles.jpg" alt="Tobi" class="profile-img">
             <p class="intro-text">
-                Hello World. I am Tobi. It is nice that you are here!
+                Hello World. I'm Tobi.
             </p>
         </main>
 
@@ -77,6 +77,10 @@
         c-3.3,8.1-5.2,17-5.2,26.3c0,38.6,31.4,70,70,70c38.6,0,70-31.4,70-70c0-9.3-1.9-18.2-5.2-26.3H-40V479.5z"/>
                     </svg>
                 </a>
+            </div>
+
+            <div class="copyright">
+                © 2025 Tobias Kohler. All rights reserved.
             </div>
         </footer>
 
